# monotron

./: Cargo.toml  README.md
deploy/k8s/monotron/: Chart.yaml  values.yaml
deploy/k8s/monotron/templates/: _helpers.tpl  deployment.yaml  secrets.yaml  service.yaml
deploy/local/: local.compose
docs/: README.md  account.md  acl.md  attrs.md  series.md
etc/db/: 001_init.sql  002_attrs.sql  003_attrs_dont_require_version.sql
src/: main.rs
src/acl/: scope.rs
src/debug/: mod.rs
src/error/: mod.rs
src/ident/: mod.rs
src/model/: account.rs  apikey.rs  attrs.rs  entry.rs  mod.rs  scope.rs
src/store/: error.rs  mod.rs
src/update/: error.rs  io.rs  mod.rs  version.rs
src/update/driver/mock/: mod.rs
src/update/driver/postgres/: mod.rs
src/update/version/: mod.rs  provider.rs
src/upgrade/: error.rs  io.rs  mod.rs
src/upgrade/driver/mock/: mod.rs
src/upgrade/driver/postgres/: mod.rs
src/upgrade/version/: mod.rs  provider.rs
test/: account.yml  acl.yml  series.yml
test/api/: acl.yml  attrs.yml
tools/: _lib.sh  cycledb  deploy  publish  services  testapi  truncate
